Change git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,3 @@
-[core]
-	fileMode = false
 [user]
 	name = Nace Logar
 [commit]
@@ -8,16 +6,18 @@
 	# prevents your from accidentally pushing to a wrong branch
 	default = nothing
 [alias]
-	dc   = diff --cached
-	co   = checkout
-	ci   = commit
-	cm   = commit -m
-	st   = status
-	br   = branch
-	lg   = !git log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	slog = log --oneline
-	rb   = rebase
-	rbc  = rebase --continue
-	rbi  = rebase -i
-	fap  = fetch --all --prune --progress
-	latest = for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
+	dic   	= diff --cached
+	chk   	= checkout
+	ci   	= commit
+	cm   	= commit -m
+	st   	= status
+	br   	= branch
+	lg   	= !git log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+	slog 	= log --oneline
+	sig		= git verify-commit HEAD^
+	rb   	= rebase
+	rbc  	= rebase --continue
+	rba  	= rebase --abort
+	rbi  	= rebase -i
+	fap  	= fetch --all --prune --progress
+	latest 	= for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
