--- a/.gitconfig
+++ b/.gitconfig
@@ -3,23 +3,29 @@
 [commit]
 	gpgsign = true
 [push]
-	# prevents your from accidentally pushing to a wrong branch
 	default = nothing
 [alias]
+	alias 	= config --get-regexp ^alias\\.
 	dic   	= diff --cached
 	chk   	= checkout
 	ci   	= commit
 	cm   	= commit -m
 	st   	= status
 	br   	= branch
-	lg   	= !git log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	slog 	= log --oneline
+	brl 	= branch -a
+	sta 	= stash
+	stal 	= stash list
+	lg   	= log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %C(green)(%cr)%C(reset) %C(bold blue)<%an>%C(reset) - %C(cyan)%GS%C(reset) %C(cyan)(%G?)%C(reset)'
+	today	= log --since yesterday --author $(git config user.email) --pretty=short
+	slog 	= log --graph --all  --decorate --oneline
 	sig		= verify-commit HEAD^
+	stsig	= !echo G - valid, B - invalid, U - Unknown, X - good and expired, Y - good and expired key, R - good and revoked key, E - cannot be checked, N - no signature
 	rb   	= rebase
 	rbc  	= rebase --continue
 	rba  	= rebase --abort
 	rbi  	= rebase -i
 	fap  	= fetch --all --prune --progress
+	cmres	= reset HEAD~
 	latest 	= for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
 [gpg]
 	program = gpg2
