--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
 	brl 	= branch -a
 	sta 	= stash
 	stal 	= stash list
-	lg   	= log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %C(green)(%cr)%C(reset) %C(bold blue)<%an>%C(reset) - %C(cyan)%GS%C(reset) %C(cyan)(%G?)%C(reset)'
+	lg   	= log --graph --pretty='format:%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %C(green)(%cr)%C(reset) - author: %C(bold blue)%an <%ae>%C(reset), commiter: %C(bold blue)%cn <%ce>%C(reset) - %C(cyan)%GS%C(reset) %C(cyan)(%G?)%C(reset)'
 	today	= log --since yesterday --author $(git config user.email) --pretty=short
 	slog 	= log --graph --all  --decorate --oneline
 	sig		= verify-commit HEAD
@@ -31,4 +31,4 @@
 	cmres	= reset HEAD~
 	latest 	= for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
 [gpg]
-	program = {{GPG_EXECUTABLE}}
+	program = gpg
