--- a/.gitconfig
+++ b/.gitconfig
@@ -31,4 +31,4 @@
 	cmres	= reset HEAD~
 	latest 	= for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
 [gpg]
-	program = gpg
+	program = {{GPG_EXECUTABLE}}
