--- a/.gitconfig
+++ b/.gitconfig
@@ -44,7 +44,7 @@
 	rba  	= rebase --abort
 	rbs  	= rebase --skip
 	rbi  	= rebase --interactive
-	fap  	= fetch --all --prune --progress
+	fap  	= fetch --all --prune --progress --tags
 	alias 	= !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 [gpg]
 	program = {{GPG_EXECUTABLE}}
