--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ init.author.email=the.code.destroyer@gmail.com
 init.author.url=https://thecodedestroyer.com
 init.license=MIT
 init.version=0.0.1
+save-exact=true
