--- a/sheldon.toml
+++ b/sheldon.toml
@@ -57,7 +57,7 @@ dir = 'plugins'
 use = [
 	'{history,sudo,colored-man-pages,command-not-found}/*.plugin.zsh',
 	'{encode64,extract,fasd,httpie}/*.plugin.zsh',
-	'{git,gitfast,git-extras,github}/*.plugin.zsh',
+	'{git,gitfast,git-extras,gh}/*.plugin.zsh',
 	'{node,nvm,yarn,npm,brew}/*.plugin.zsh',
 	'{docker,docker-compose,ansible,kubectl,helm}/*.plugin.zsh',
 	'{flutter}/*.plugin.zsh',
