--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
 scripts-prepend-node-path=true
-init.author.name=Nace Logar
-init.author.email=the.code.destroyer@gmail.com
-init.author.url=https://thecodedestroyer.com
-init.license=MIT
-init.version=0.0.1
+init-author.name=Nace Logar
+init-author.email=the.code.destroyer@gmail.com
+init-author.url=https://thecodedestroyer.com
+init-license=MIT
+init-version=0.0.1
 save-exact=true
