Change gpg program

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,4 +22,4 @@
 	fap  	= fetch --all --prune --progress
 	latest 	= for-each-ref --sort=-committerdate refs/heads refs/remotes --format='%(committerdate:iso8601) %(refname:short)%(authorname)'
 [gpg]
-	program = gpg-default
+	program = gpg2
